--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 
 </head>
 <body>
+    <h1 class="text-center pb-5"><b>FIGHT!</b></h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6"><img src="//placehold.it/200x200" alt=""></div>
+            <div class="col-6"><img src="//placehold.it/200x200" alt=""></div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <button type="button" class="btn btn-success">Slap</button>
+                <button type="button" class="btn btn-danger">Punch</button>
+                <button type="button" class="btn btn-warning">Kick</button>
+            </div>
+            <div class="col-6">
+                <button type="button" class="btn btn-success">Slap</button>
+                <button type="button" class="btn btn-danger">Punch</button>
+                <button type="button" class="btn btn-warning">Kick</button>
+            </div>
+        </div>
+    </div>
     
 
 
