--- a/index.html
+++ b/index.html
@@ -5,27 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="game.js">
+    <link rel="stylesheet" href="game.css">
     <title>Fight Club</title>
 
 </head>
 <body>
     <h1 class="text-center pb-5"><b>FIGHT!</b></h1>
-    <div class="container-fluid">
+    <div class="container-fluid text-center">
         <div class="row">
-            <div class="col-6"><img src="//placehold.it/200x200" alt=""></div>
-            <div class="col-6"><img src="//placehold.it/200x200" alt=""></div>
+            <div class="col-12">HP: <span id="health"></span></div>
         </div>
         <div class="row">
-            <div class="col-6">
-                <button type="button" class="btn btn-success">Slap</button>
-                <button type="button" class="btn btn-danger">Punch</button>
-                <button type="button" class="btn btn-warning">Kick</button>
+            <div class="col-12"><img src="Mike Tyson game.gif" alt=""></div>
+        </div>
+<!-- attack buttons         -->
+        <div class="row">
+            <div class="col-12">
+                <button type="button" onclick="attack('slap')" class="btn btn-success">Slap</button>
+                <button type="button" onclick="attack('punch')" class="btn btn-danger">Punch</button>
+                <button type="button" onclick="attack('kick')" class="btn btn-warning">Kick</button>
             </div>
-            <div class="col-6">
-                <button type="button" class="btn btn-success">Slap</button>
-                <button type="button" class="btn btn-danger">Punch</button>
-                <button type="button" class="btn btn-warning">Kick</button>
+        </div>
+        <div class="row">
+            <div class="col-12"># of Attacks: <span id="hitcounter"></span>
             </div>
         </div>
     </div>
