code almost done

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
         </div>
 <!-- attack buttons         -->
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 pt-3">
                 <button type="button" onclick="attack('slap')" class="btn btn-success">Slap</button>
                 <button type="button" onclick="attack('punch')" class="btn btn-danger">Punch</button>
                 <button type="button" onclick="attack('kick')" class="btn btn-warning">Kick</button>
+            </div>
+            <div class="col-12 pt-3">
+                <button type="button" onclick="giveItem('fire')" class="btn btn-danger">Fire</button>
+                <button type="button" onclick="giveItem('ice')" class="btn btn-primary">Ice</button>
+                <button type="button" onclick="giveItem('fatality')" class="btn btn-dark">Fatality</button>
             </div>
         </div>
         <div class="row">
