--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <button type="button" onclick="giveItem('ice')" class="btn btn-primary">Ice</button>
                 <button type="button" onclick="giveItem('fatality')" class="btn btn-dark">Fatality</button>
             </div>
+            <div class="col-12">
+                    <button type="button" onclick="reset()" class="btn btn-success">RESTART</button>                
+            </div>
         </div>
         <div class="row">
             <div class="col-12"># of Attacks: <span id="hitcounter"></span>
